<resources>
    <string name="app_name">Walk Alarm</string>
    <string name="no_alarm">All alarms are off</string>
    <string name="default_time">00:00</string>
    <string name="default_days">S M T W T F S</string>
    <string name="sat_sun">S</string>
    <string name="mon">M</string>
    <string name="tue_thu">T</string>
    <string name="wed">W</string>
    <string name="fri">F</string>

    <string name="alarm_name_hint">Alarm name</string>
    <string name="save">Save</string>
    <string name="delete_dialog_title"><font color="#000000">Confirm Alarm Deletion</font></string>
    <string name="delete_dialog_content"><font color="#000000">Do you want to delete this alarm?</font></string>
    <string name="ok"><font color="#d81b60">OK</font></string>
    <string name="cancel"><font color="#000000">Cancel</font></string>

    <string name="target_walk">Walk the alarm off!</string>
    <string name="target_dismiss">You earned the dismiss!</string>
    <string name="default_zero">0</string>
    <string name="steps">Steps</string>
    <string name="dismiss">Dismiss</string>

    <string name="notif_channel_name">Walkalarm</string>
</resources>
