<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AlarmLandingActivity">

    <TextView
        android:id="@+id/target"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|center_vertical"
        android:text="@string/target_walk"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toTopOf="@+id/counter_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/counter_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/dismiss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/target">

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="@string/default_zero"
            android:textColor="@android:color/black"
            android:textSize="125sp"
            app:fontFamily="sans-serif-medium" />

        <TextView
            android:id="@+id/stepsText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/steps"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:fontFamily="sans-serif-medium" />
    </LinearLayout>

    <Button
        android:id="@+id/dismiss"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dismiss"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter_layout" />

</android.support.constraint.ConstraintLayout>